ont-map: cleanup code: rename Stream methods, remove unused methods, review utils to use Models from ONT-API(1.4.2), etc